--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "NODE_PATH=./ DEBUG=* nodemon index.js"
+    "start": "NODE_PATH=./ DEBUG=*,-nodemon nodemon demo.js"
   },
   "author": "@gregdaynes",
   "license": "MIT"
