--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "A very small autoloader for Nodejs with Components in mind.",
   "main": "src/index.js",
   "scripts": {
-    "test": "mocha test/ -w"
+    "test": "mocha src -w --recursive"
   },
   "author": "gregdaynes",
   "license": "MIT",
   "devDependencies": {
+    "chai": "3.5.0",
     "debug": "^2.2.0",
     "eslint": "^2.2.0",
-    "eslint-config-airbnb": "^6.0.2"
+    "eslint-config-airbnb": "^6.0.2",
+    "mocha": "2.4.5"
   }
 }
